# axum-backend-project

./: Cargo.toml  README.md
migrations/: 20260104173427_users.down.sql
src/: app_start.rs  config.rs  db_handler.rs  dtos.rs  http_errors.rs  lib.rs  main.rs  middleware.rs  model.rs  routes.rs
src/handler/: auth_endpoint.rs  mod.rs  user_handler.rs
src/mail/: mails_type.rs  mod.rs  sendemail.rs
src/utils/: password.rs  token.rs
