[package]
name = "axum-backend-prject"
version = "0.1.0"
edition = "2024"
authors = ["Mahmoud Khaled Khera"]
description = "aut backend using axum"
repository="https://github.com/mahmoudkhera/axum-backend-project.git"
readme = "README.md"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
axum="0.8.8"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

chrono={version="0.4.42",features=["serde"]}

serde={version="1.0.228",features=["derive"]}
serde_json="1.0.148"


uuid = { version = "1.19.0", features = ["v4", "serde"] }

dotenvy = "0.15"


validator = { version = "0.16", features = ["derive"] }


async-trait = "0.1.89"


tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors","trace"] }




